// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`COMPONENT: FormStepperNav > should disable Submit button when there are errors 1`] = `
<DocumentFragment>
  <button
    class="px-8 py-2 font-bold text-white rounded focus:outline-none focus:shadow-outline bg-[#5cb85c] hover:bg-[#449C44] cursor-not-allowed opacity-50"
    data-testid="submit-button"
    disabled=""
    type="submit"
  >
    Submit
  </button>
</DocumentFragment>
`;

exports[`COMPONENT: FormStepperNav > should render Next button when not on last step 1`] = `
<DocumentFragment>
  <button
    class="px-8 py-2 font-bold text-white  rounded  focus:outline-none focus:shadow-outline bg-[#1e6cab] hover:bg-[#387db6]"
    data-testid="next-button"
    type="button"
  >
    Next
  </button>
</DocumentFragment>
`;

exports[`COMPONENT: FormStepperNav > should render Submit button when on last step 1`] = `
<DocumentFragment>
  <button
    class="px-8 py-2 font-bold text-white rounded focus:outline-none focus:shadow-outline bg-[#5cb85c] hover:bg-[#449C44]"
    data-testid="submit-button"
    type="submit"
  >
    Submit
  </button>
</DocumentFragment>
`;

exports[`COMPONENT: FormStepperNav > should show loading spinner when isLoading is true 1`] = `
<DocumentFragment>
  <button
    class="px-8 py-2 font-bold text-white rounded focus:outline-none focus:shadow-outline bg-[#5cb85c] hover:bg-[#449C44] cursor-not-allowed"
    data-testid="submit-button"
    type="submit"
  >
    <svg
      class="w-5 h-5 text-white"
      data-testid="loading-spinner"
      viewBox="0 0 38 38"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <lineargradient
          id="spinner-gradient"
          x1="8.042%"
          x2="65.682%"
          y1="0%"
          y2="23.865%"
        >
          <stop
            offset="0%"
            stop-color="currentColor"
            stop-opacity="0"
          />
          <stop
            offset="63.146%"
            stop-color="currentColor"
            stop-opacity=".631"
          />
          <stop
            offset="100%"
            stop-color="currentColor"
          />
        </lineargradient>
      </defs>
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <g
          transform="translate(1 1)"
        >
          <path
            d="M36 18c0-9.94-8.06-18-18-18"
            id="Oval-2"
            stroke="url(#spinner-gradient)"
            stroke-width="2"
          >
            <animatetransform
              attributeName="transform"
              dur="0.9s"
              from="0 18 18"
              repeatCount="indefinite"
              to="360 18 18"
              type="rotate"
            />
          </path>
          <circle
            cx="36"
            cy="18"
            fill="currentColor"
            r="1"
          >
            <animatetransform
              attributeName="transform"
              dur="0.9s"
              from="0 18 18"
              repeatCount="indefinite"
              to="360 18 18"
              type="rotate"
            />
          </circle>
        </g>
      </g>
    </svg>
  </button>
</DocumentFragment>
`;
